<resources>
    <string name="app_name">掌上南邮</string>
    <string name="title_activity_main">主界面</string>
    <string name="subtitle_activity_main">应用的入口主界面</string>
    <string name="title_activity_classtable">课表</string>
    <string name="subtitle_activity_classtable">模拟浏览器的登陆过程</string>
    <string name="title_activity_welcome">闪屏画面</string>
    <string name="subtitle_activity_welcome">启动闪屏画面</string>
    <string name="title_activity_club">七彩社团</string>
    <string name="title_activity_test">成绩查询</string>
    <string name="title_activity_schedule">口袋课程表</string>
    <string name="title_activity_lifeassistant">生活秘书</string>
    <string name="subtitle_activity_lifeassistant">启动生活秘书</string>
    <string name="schoolguide_Tab">指南</string>
    <string name="busroute_tab">出行</string>
    <string name="localnews_tab">周边</string>
    <string name="resttable_tab">作息</string>
    <string name="title_activity_library">掌上图书馆</string>
    <string name="subtitle_activity_library">搜索图书</string>
    <string name="input_search_book">输入书名或关键词</string>
    <string name="btn_search_book">搜索</string>
    <string name="show_collection">我的收藏</string>
    <string name="spin_prompt">请选择:</string>
    <string name="youju">中国邮政仙林邮政所：南师大仙林校区正前300 米，学衡路和文枢东路路口处</string>
    <string name="yaodian">①先声药店( 仙林药店)：仙林街道学衡路11 号（康桥圣菲南门口就是爱尚街区华润苏果对面）"\n"②保济堂大药房( 大成名店店):文苑路3 号仙林大成名店 " "1" "0" "7"
        "3" "-" "1074 号"\n"③同仁堂( 仙林金鹰天地店) ：仙林大学城学海路1 号金鹰奥莱城内
    </string>
    <string name="peiyaoshi">南三食堂旁边，李苑宿舍30 栋对面</string>
    <string name="xiuchedian">①南三食堂旁边，李苑宿舍30 栋对面"\n"②南三食堂对面，李苑与柳苑之间</string>
    <string name="meirongmeifa">①浪波湾：梅苑楼下一条街"\n"②爱秀美容美发：仙林金鹰奥莱城负一楼"\n"③东京秀客：仙林大成名店1 楼"\n"④华仔发型( 学衡路店)：仙林学衡路苏果超市旁
    </string>
    <string name="yiyuan">仙林医院（栖霞区仙林社区卫生服务中心）：南师大对面，文枢东路1 号"\n"南京市栖霞区医院：南京栖霞区尧化门尧佳路28 号与公园东路路口</string>
    <string name="jinrongfuwu">①中信银行" "2" "4 小时ATM 机自助服务（可存可取）：兰苑楼下和南三食堂对面"\n"②中国邮政储蓄银行" "ATM 机自助服务：兰苑楼下"\n"③交通银行( 仙林支行)
        ：仙林大学城文苑
        路2 号"\n"④中国民生银行( 仙林大学城支行)：文苑路3 号仙林大成名店1 楼"\n"⑤中国工商银行(亚东分理处)：" "仙林咏梅山庄倚竹园11-106"\n"⑥南京银行：文苑路3 号仙
        林大成名店对面"\n"⑦中国农业银行( 金鹰支行): 学海路1 号金鹰奥莱城F 馆( 近地铁2 号线仙林中心站)"\n"⑧中国工商银行：仙隐北路公交车站台附近"\n"⑨中国邮政储蓄银
        行：学衡路和文枢东路路口处"\n"特别提醒：南邮的开户行在：中信银行城北支行，乘坐D1 至虹桥站下车，步行达到第一个四岔路口左转200 米即到，如需办理网银等业务请到开户行城
        北支行。（包括所有的扣费都是从学校发的中信卡中扣除）
    </string>
    <string name="chaoshi">①苏果好的便利店：兰苑楼下一条街"\n"②教育超市：南三食堂一楼层面"\n"③苏果社区店：大成名店旁负一楼（文苑路公交车站台附近）"\n"④华润苏果：爱尚街区店（学则路地铁站附近）和
        仙隐北路公交站台附近
    </string>
    <string name="paichusuo">仙林派出所：文枢东路11 号，" "电话号码：025-85899990</string>
    <string name="tushuguanbuchong">" "南京邮电大学仙林图书馆于2007 年动工兴建，2010 年五月正式落成启用。新馆建筑面积约33018 平方米，现有藏书684437 册，阅览座位4645
        个，配置了读报机、
        导航机、自动借还机、自助复印机、独立的VIP 研修室等现代化服务设施。新馆采
        取单一进出口，藏、借、阅一体化的大流通现代管理模式，允许读者携包自由进出，
        给予读者最大的自由空间，使图书馆真正成为读者的精神乐园。
        \n\n开放时间
        \n（1）教学参考书阅览室、人文科学图书阅览室、自然科学图书阅览室、社会科学图书阅览室开放时间为：
        周一至周五： 8：30--22：00 周六：9：00--22：00 周日：9：00--16：30
        \n\n（2）人文艺术图书阅览室、报刊阅览室开放时间为：
        周一至周五： 8：30--17：00 周六、周日：9：00--16：30
        \n\n（3）外文图书阅览室、样本图书阅览室、电子阅览室开放时间为：
        周一至周五： 8：30--17：00\n\n**阅览室**\n*二楼：
        \n" "外文图书阅览室： 主要收藏外文原版、影印图书、回忆录和由中文出版社出版的有国外版权的外文书。
        \n" "教学参考书阅览室： 主要收藏语言文字类和数学物理类图书。
        \n" "电子阅览室： 可供读者查阅馆藏OPAC 目录和馆藏电子数据库资源。
        \n\n*三楼：
        \n" "社会科学图书馆阅览室: 主要收藏马列毛邓理论类、哲学宗教类、社会科学总论、政治法律、军事、经济和其他综合性图书。
        \n" "自然科学图书馆阅览室： 主要收藏自然科学总论、天文学、生物科学、医药科学、工业技术、电工技术、无线电等图书。
        \n\n*四楼：
        \n" "样本图书馆阅览室： 主要收藏数学物理、电工技术、自动化技术、语言文字类中的考研、带磁盘的图书、年鉴、手册等。
        \n" "报刊阅览室： 主要收藏各类现刊、精装合订本等图书。
        \n" "学位论文与标准文献阅览室： 收藏我校历届研究生学位论文和通信行业标准文献。
        \n\n*五楼：
        \n" "人文艺术阅览室： 主要收藏文学、艺术两个类别的图书。
        \n" "合订本期刊阅览室： 主要收藏中文合订期刊、外文合订期刊。
        \n" "学生阅览室： 为读者提供舒适、优雅的自修环境。
    </string>
    <string name="qijuzhinan">**关于食堂**\n学校有南一，南二，南三三个食堂，三个食堂基本一样，
        特色的是南一二楼和南三二楼的点菜小炒，大家可以一试。南
        二二楼的大娘水饺，还有拉面馆，砂锅炒饭盖浇饭等等，南二
        较丰富，但人也很多。水果，在兰苑门口有卖，南三旁教育超
        市有卖。校内大超市有苏果超市和教育超市，教育超市价格相
        对较低，可以刷饭卡。\n\n**包裹收寄**\n包裹收寄分为两种，一种是邮政EMS 快递和信件，学校有专
        门的邮局，设在东门旁边，快递需要凭单和个人身份证领取。另
        一种是普通快递（如申通、圆通等），领取地点一般都在学校正
        门口，快递公司一般会通过信息通知你领取时间。寄出快递也可
        以通过邮局或者兰苑门口的圆通寄发点。
    </string>
    <string name="tongxinzhinan">**网络服务**\n校园卡是上网必备的[用Dr.com拨号，服务器为192.168.168.168，账号为校园卡号，密码为身份证后6 位，
        上网和上机之前必须使用校园卡终端机上的银行转账功能分别转
        入到机房上机和城市热点里。需要注意的是，城市热点账户需要
        在机房登录一次激活后方能转账。
        \n\n(1) 教室上网（无线：njupt），一小时两毛（需自带电脑）
        在教室搜索njupt，然后下载上网客户端（Dr.com），输入校
        园卡卡号和密码，即可登录外网，网速一般还可以，而且还相对便宜
        \n\n(2) 图书馆二楼有电子阅览室，可以上网，千兆网卡，网
        速相当快。上机账号是校园卡号，密码是学号，登录后用
        Dr.com 上网。希望大家好好利用图书馆资源。
        \n\n(3) 教二共有A、B、C 三个机房，其中A 机房电脑最好，
        上机账号为学号，密码是身份证后6 位。登录后用Dr.com
        上网。机房开门时间和上课时间一样。这对于没有电脑的大
        一新生是个不错的选择。
        \n\n(4) 在宿舍直接通过宿舍网口可以直接上学校内网和FTP
        服务器，速度很快，上外网时需要参加中国电信送手机活动，直接连接宿舍端口，有6兆网速、10兆网速和20兆网速可选。
        也可通过连接无线
        chinanet，拨号上网。中国移动用户可连接CMCC-EDU上网，
        中国联通用户可连接china-unicom上网，移动和联通需办相应的套餐。有线11 点断网，无线不断网。
        \n\n给出学校现有的FTP 地址：
        \ncclab：10.20.168.7（这是我校最大的ftp 服务器，需要用
        flashFXP 或CuteFTP 登录，资源非常丰富）
        \nFTP 搜索引擎：10.20.79.12
        \n学生汇：10.20.79.1
        \n学校官方ftp：10.10.240.12
        \n教学相关：10.21.0.2
    </string>
    <string name="route107">尧化门(二号路) - 尧化新村 - 尧化门西 - 海子口 - 花卉物流中心 - 尧胜村 - 亚东花园城 - 雁鸣山庄 - 仙隐北路 - 文苑路西站 - 亚东新城区 - 文澜路南站 -
        文澜路 - 文澜路北站 - 学海路
        - 邮电大学北站[仙林] - 南工院西站 - 紫金学院 - 信息学院 - 九乡河西路 (20站)
    </string>
    <string name="route165">长途东站 - 樱铁村 - 伊刘屯 - 王家湾 - 岔路口 - 东杨坊 - 徐庄软件园 - 尧胜村 - 亚东花园城 - 雁鸣山庄 - 仙隐北路 - 文苑路西站 - 亚东新城区 -
        文澜路南站 - 文澜路 - 文澜路北站 - 学海
        路 - 邮电大学北站[仙林] - 南工院西站 - 紫金学院 - 信息学院 - 九乡河西路 (22站)
    </string>
    <string name="route177">仙林中心站 - 学海路南站 - 南京邮电大学[仙林] - 仙境路 - 邮电学院东站[仙林] - 南工院西站 - 高科荣域 - 鸿运嘉园 - 文成路 - 学子路 - 学海路 -
        文澜路北站 - 文澜路 - 文澜路南站
        - 亚东新城区(仙林大学城管委会) - 文枢东路 - 学津路 - 杉湖西路 - 仙林中心站 (19站)
    </string>
    <string name="routeDS">东山总站 - 泥塘 - 上坊西站 - 上坊(104国道) - 江宁二院 - 下坊 - 市井 - 魏村 - 吕盖 - 农副产品物流南 - 农副产品物流北 - 大里墅南 - 大里墅北 -
        艾塘 - 公路养护中心 - 南庄 - 谢盖 - 沧
        波门[南] - 东解村 - 湖头南 - 药科学校 - 湖头北 - 小定林 - 麒麟开发区 - 丁家村 - 悦民路(南) - 麒麟门新大街 - 交通技校 - 华侨公墓 - 市农科所 - 仙鹤门[北] - 听泉山庄 - 仙隐北路
        - 文苑路西站 - 亚东新城区 - 文澜路南站 - 文澜路 - 文澜路北站
        - 学海路 - 邮电大学北站[仙林] - 南工院西站 - 紫金学院 - 信息学院 - 九乡河西路 - 衡阳寺 - 红枫新村 - 栖霞老街 - 栖霞山 - 南水新村 - 梅墓 - 中梅墓 - 下梅墓 - 摄山 - 赵庄东 -
        向阳桥[龙潭] - 健康村 - 小圩 - 小农场 - 兴隆村[江畔人家] - 三兴
        村 - 新桥[龙潭] - 油坊 - 顾家村 - 花园 - 园沟 - 三江口 - 滨江 - 叶庄 - 严庄 - 营防 - 营防东 - 官州路 - 太平村[上坝] - 同心路 - 块子村 - 块子桥 - 老摊路 - 上坝(南)
        (78站)
    </string>
    <string name="route97">仙林中心站(上客站) - 学典路 - 外国语学校 - 中医药大学[仙林] - 杉湖东路 - 南京邮电大学[仙林] - 财经大学[仙林] - 文苑路 - 亚东新城区 - 文苑路西站 -
        仙隐北路 - 雁鸣山庄 - 亚
        东花园城 - 尧胜村 - 徐庄软件园 - 东杨坊 - 岔路口 - 王家湾 - 伊刘屯 - 樱铁村 - 长途东站(北) - 新庄广场东 - 火车站广场东 - 南京车站(火车站东广场) (24站)
    </string>
    <string name="route310">孝陵卫 - 大栅门 - 钟灵街 - 柳营 - 顾家营 - 五棵松 - 钟山学院 - 马群 - 马群停车场(地铁马群站) - 新街 - 太阳城 - 黄庄一号路 - 朱庄 - 朱庄北站 -
        仙鹤门[地铁站] - 仙鹤门东 - 应天学
        院 - 仙林中学 - 听泉山庄 - 仙隐北路 - 文苑路西站 - 亚东新城区 - 文苑路 - 财经大学[仙林] - 南京邮电大学[仙林] - 仙境路 - 邮电学院东站[仙林] - 南工院西站 - 紫金学院 - 信息学院 -
        九乡河西路 (31站)
    </string>
    <string name="route108">新港开发区 - 恒广路 - 恒竞路 - 栖霞公园路 - 吴家边 - 尧辰村 - 尧化新村 - 尧化门西 - 海子口 - 花卉物流中心 - 尧胜村 - 亚东花园城 - 雁鸣山庄 -
        仙隐北路 - 文苑路西站 - 亚东新城区 -
        文苑路 - 财经大学[仙林] - 南京邮电大学[仙林] - 杉湖东路 - 中医药大学[仙林] - 外国语学校 - 仙林中心站 (23站)
    </string>
    <string name="route146">迈皋桥广场 - 华电路 - 长营村 - 北苑新村 - 月苑小区北 - 小营村(西站) - 墨香路 - 经五立交 - 伊刘屯 - 王家湾 - 岔路口 - 东杨坊 - 徐庄软件园 -
        尧胜村 - 亚东花园城 - 雁鸣山庄 - 仙隐北
        路 - 文苑路西站 - 亚东新城区 - 文苑路 - 财经大学[仙林] - 南京邮电大学[仙林] - 杉湖东路 - 中医药大学[仙林] - 外国语学校 - 仙林中心站(下客站) (26站)
    </string>
    <string name="routeD1">宁工新寓 - 龙江花园 - 清江花苑 - 虹桥(南京饭店) - 司背后 - 玄武湖隧道(公交总公司) - 新庄广场东 - 长途东站(北) - 徐庄软件园 - 仙隐北路 - 亚东新城区 -
        文苑路 - 财经大学[仙林]
        - 南京邮电大学[仙林] - 中医药大学[仙林] - 南大仙林校区 - 元化路 (17站)
    </string>
    <string name="route321">南大科学园 - 生命科技园 - 纬地路 - 信息学院 - 信息学院南门 - 紫金学院 - 高科荣域 - 鸿运嘉园 - 文成路 - 南京技师学院 - 邮电大学北站[仙林] - 南工院西站
        - 南京工业职业技术学院 - 邮电大学东站[仙林] - 仙境路 - 杉湖东路 - 中医药大学[仙林] - 外国语学校 - 南京邮电大学[仙林] - 南京财经大学[仙林] - 文苑路 - 南师大实验学校 -
        亚东新城区(仙林大学城管委会) - 学衡路 - 学则路(地铁站) - 应天学院(仙林大道) - 仙鹤门东 - 仙鹤门[地铁站] - 仙鹤茗苑 - 仙居雅苑 (30站)
    </string>
    <string name="route322">元化路 - 南大仙林校区 - 九乡河大桥 - 仙境路[羊山公园] - 中医药大学[仙林](南) - 学原路 - 仙林鼓楼医院 - 学子路[灵山北路] - 灵山北路 - 风华路 -
        尚东路 - 汇通路(山水风华) - 学衡路 - 亚东新城区(仙林大学城管委会) - 文澜路南站 - 文澜路 - 学林路 (17站)
    </string>
    <string name="route323">金港科创园 - 金港科创园南站 - 学林路 - 文澜路 - 南京师范大学东门 - 文澜路南站 - 亚东新城区(仙林大学城管委会) - 学衡路 - 学则路(地铁站) -
        应天学院(仙林大道) - 仙鹤门东 - 仙鹤门[地铁站] - 石狮路北站 - 紫东创意园 (14站)
    </string>
    <string name="route324">仙林中心站 - 学海路南站 - 南京邮电大学[仙林] - 仙境路 - 邮电大学东站[仙林] - 南工院西站 - 高科荣域 - 鸿运嘉园 - 文成路 - 南京技师学院 - 学海路 -
        文澜路北站 - 文澜路 - 文澜路南站 - 亚东新城区(仙林大学城管委会) - 文范路 - 学津路 - 杉湖西路 - 仙林中心站 (19站)
    </string>
    <string name="background1">迈皋桥 - 红山动物园(红山站) - 南京车站(地铁南京站) - 玄武湖隧道(地铁新模范马路站) - 玄武门 - 鼓楼 - 珠江路 - 新街口 - 张府园 - 三山街 - 中华门
        - 安德门(地铁站) - 小行小区(地铁小行站) - 泰山路南站(地铁中胜站) - 元通 - 奥体中心 (16站)
    </string>
    <string name="background1nanyanxian">迈皋桥 - 红山动物园(红山站) - 南京车站(地铁南京站) - 玄武湖隧道(地铁新模范马路站) - 玄武门 - 鼓楼 - 珠江路 - 新街口 - 张府园 -
        三山街 - 中华门 - 安德门(地铁站) - 天隆寺 - 软件大道 - 花神庙(宁南大道) - 南京南站(高铁) - 双龙大道 - 河定桥(地铁站) - 胜太路(地铁站) - 百家湖 - 小龙湾 - 竹山路[地铁站] -
        天印大道 - 龙眠大道(义乌小商品城) - 江苏经贸学院站 - 南京交院站 - 中国药科大学 (27站)
    </string>
    <string name="background2">油坊桥[地铁站] - 雨润大街 - 元通 - 奥体东站 - 兴隆大街 - 集庆门大街地铁站 - 云锦路(地铁站) - 莫愁新寓(地铁莫愁湖站) - 汉中门 -
        莫愁路(地铁上海路站) - 新街口 - 大行宫 - 西安门(军区总院) - 明故宫 - 卫桥(地铁苜蓿园站) - 小卫街(地铁下马坊站) - 孝陵卫(地铁站) - 钟灵街 - 马群 - 金马路[地铁站] - 仙鹤门[地铁站]
        - 学则路 - 仙林中心站(地铁站) - 羊山公园 - 南大仙林校区 - 经天路 (26站)
    </string>
    <string name="resttitle_xianlin">
        起床："         "6:30\n锻炼："         "6:45-7:10\n早饭："         "7:10-7:50\n\n\n预备铃："     "7:50\n第一节课：" "8:00-8:45\n第二节课：" "8:50-9:35\n第三节课：" "9:50-10:35\n第四节课：" "10:40-11:25\n第五节课：" "11:30-12:15\n\n\n
        午饭："         "12:15\n" "午休："         "12:45\n\n\n预备铃："     "13:35\n第六节课：" "13:45-14:30\n第七节课：" "14:35-15:20\n第八节课：" "15:35-16:20 \n第九节课：" "16:25-17:10\n\n\n
        晚饭："         "17:30\n\n\n第十节课："     "18:30-19:15\n第十一节课：" "19:25-20:10\n第十二节课：" "20:20-21:05\n\n\n熄灯："         "23:30\n\n\n
    </string>
    <string name="resttitle_sanpailou">
        起床："         "6:30\n锻炼："         "6:45-7:10\n早饭："         "7:10-7:50\n\n\n预备铃："     "7:50\n第一节课：" "8:00-8:50\n第二节课：" "9:00-9:50\n第三节课：" "10:10-11:00\n第四节课：" "11:10-12:00\n\n\n
        午饭："         "12:00\n" "午休："         "12:30\n\n\n预备铃："     "13:50\n第五节课：" "14:00-14:50\n第六节课：" "15:00-15:50\n第七节课： ""16:00-16:50\n第八节课：" "17:00-17:50\n\n\n
        晚饭："         "18:00\n\n\n第九节课："     "18:30-19:20\n第十节课："     "19:30-20:20\n第十一节课：" "20:30-21:20\n\n\n熄灯："         "23:00\n\n\n
    </string>
    <string name="subtitle_activity_settings">设置页面</string>
    <string name="title_activity_settings">设置</string>
    <string name="subtitle_activity_image">可缩放图片</string>
    <string name="title_activity_image">图片</string>
    <string name="subtitle_activity_image2">图片2</string>
    <string name="title_activity_image2">图片2</string>
    <string name="title_activity_refresh">手机报</string>
    <string name="subtitle_activity_refresh">手机报演示Activity</string>
    <string name="title_activity_parse">Parse SDK演示</string>
    <string name="subtitle_activity_parse">Pasre Activity</string>
    <string name="title_activity_sugar">SugarDB演示</string>
    <string name="subtitle_activity_sugar">SugarDB演示Activity</string>
    <string name="title_activity_imageloader">ImageLoader演示</string>
    <string name="subtitle_activity_imageloader">ImageLoader演示Activity</string>
    <string name="subtitle_activity_club">信息来自人人主页</string>
    <string name="title_activity_lost_and_found">寻物平台</string>
    <string name="subtitle_activity_lost_and_found">寻物平台演示</string>
    <string name="title_activity_message_list">消息列表</string>
    <string name="subtitle_activity_message_list">历史推送消息</string>
</resources>