<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    >
    
    <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:scrollbars="none"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="25dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/lifecontent_background" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="5dp">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            android:layout_marginTop="0dp"
                            
                            android:gravity="center_vertical"
                            android:text="107路"
                            
                            android:textSize="8pt" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                           
                            android:text="@string/route107" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            
                            android:gravity="center_vertical"
                            android:text="165路"
                            
                            android:textSize="8pt" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                          
                            android:text="@string/route165" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            
                            android:gravity="center_vertical"
                            android:text="177路"
                            
                            android:textSize="8pt" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            
                            android:text="@string/route177" />
                        
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            
                            android:gravity="center_vertical"
                            android:text="东上路"
                            
                            android:textSize="8pt" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            
                            android:text="@string/routeDS" />
                        
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            
                            android:gravity="center_vertical"
                            android:text="97路"
                            
                            android:textSize="8pt" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            
                            android:text="@string/route97" />
                        
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            
                            android:gravity="center_vertical"
                            android:text="310路"
                            
                            android:textSize="8pt" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            
                            android:text="@string/route310" />
                        
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            
                            android:gravity="center_vertical"
                            android:text="108路"
                            
                            android:textSize="8pt" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            
                            android:text="@string/route108" />
                        
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            
                            android:gravity="center_vertical"
                            android:text="146路"
                            
                            android:textSize="8pt" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            
                            android:text="@string/route146" />
                        
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            
                            android:gravity="center_vertical"
                            android:text="D1路"
                            
                            android:textSize="8pt" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            
                            android:text="@string/routeD1" />
                    </LinearLayout>
                </ScrollView>
    

</LinearLayout>