<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:text="周     边     信     息"
            android:textSize="22sp"
            android:textColor="#1abc9c"
            android:background="@drawable/bottomline" 
            android:gravity="center"/>
    <ScrollView

            android:background="@drawable/lifecontent_background"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:scrollbars="none" 
            android:layout_weight="76">
                  <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="邮局"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"
                    android:drawableLeft="@drawable/littlepoint"/>
                   <TextView 
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/youju"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"/>
                    
                   <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="派出所"
                        android:textSize="18sp"
                        android:layout_gravity="right|top"
                        android:textColor="#FFFFFF"
                        android:drawableLeft="@drawable/littlepoint"/>
                  <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/paichusuo"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"/>
                 <TextView 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="超市"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"
                    android:drawableLeft="@drawable/littlepoint"/>
                <TextView 
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/chaoshi"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"/>

                <TextView 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="金融服务"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"
                    android:drawableLeft="@drawable/littlepoint"/>
                <TextView 
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="25dp"
                    android:textColor="#FFFFFF"
                    android:text="@string/jinrongfuwu"
                    android:textSize="14sp"   />
                <TextView 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="医院"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"
                    android:drawableLeft="@drawable/littlepoint"/>
                <TextView 
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/yiyuan"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"/>
                <TextView 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="美容美发"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"
                    android:drawableLeft="@drawable/littlepoint"/>
                <TextView 
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/meirongmeifa"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="药店"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"
                    android:drawableLeft="@drawable/littlepoint"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yaodian"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="配钥匙"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"
                    android:drawableLeft="@drawable/littlepoint"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/peiyaoshi"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"/>
                <TextView 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="修车点"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"
                    android:drawableLeft="@drawable/littlepoint"/>
                <TextView 
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/xiuchedian"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"/>
                
                </LinearLayout>
                </ScrollView>
    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:background="@drawable/bottomline" />
            
           </LinearLayout>

</LinearLayout>