<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    >
    
    
    
    <ScrollView     
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="25dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/lifecontent_background"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:scrollbars="none" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            android:layout_marginTop="0dp"
                            android:gravity="center_vertical"
                            android:text="图书馆补充"
                            
                            android:textSize="8pt" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            
                            android:text="@string/tushuguanbuchong" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            
                            android:gravity="center_vertical"
                            android:text="起居指南"
                            
                            android:textSize="8pt" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            
                            android:text="@string/qijuzhinan" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            
                            android:gravity="center_vertical"
                            android:text="通信指南"
                            
                            android:textSize="8pt" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            
                            android:text="@string/tongxinzhinan" />
                    </LinearLayout>
                </ScrollView>
    
    
    

</LinearLayout>